remove menu_lefttop fixed width style because it was too narrow for new Community Resources text (TriTryp had already stopped using it the width so opting to remove from all others rather than increasing the width value)
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@27272 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/GiardiaDB.css
+++ b/Site/htdocs/assets/css/GiardiaDB.css
@@ -578,7 +578,6 @@ div#menu ul li:hover ul, div#menu ul ul li:hover ul, div#menu ul ul ul li:hover 
 
 #menu_lefttop a.heading {
 	height: 24px;
-	width: 191px;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 17px;
 	voice-family: "\"}\"";
